Fix spacing between icons and footer

--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ h2 {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 2em auto 3em auto;
+  margin: 2em auto 4em auto;
 }
 
 .footer {
